[package]
name = "emu-core-audio-driver"
version = "0.1.1"
authors = ["ferris <jake@fusetools.com>"]
description = "Core Audio driver for the emu project."
homepage = "https://github.com/emu-rs/emu"
repository = "https://github.com/emu-rs/emu-core-audio-driver"
license = "BSD-2-Clause"

[dependencies]
emu-audio-types = "0.1.0"
coreaudio-rs = "0.2.0"
